--- a/style.css
+++ b/style.css
@@ -42,25 +42,11 @@ body{
 
 #git{
   padding-top: 8px;
+  color: var(--ctaColor)
 }
 #git:hover{
   cursor: pointer;
-  color: var(--ctaColor);
-}
-#git2{
-  padding-top: 8px;
-}
-#git2:hover{
-  cursor: pointer;
-  color: var(--ctaColor);
-}
-
-#git3{
-  padding-top: 8px;
-}
-#git3:hover{
-  cursor: pointer;
-  color: var(--ctaColor);
+  color: white;
 }
 
 
@@ -310,28 +296,30 @@ flex-direction: column;
 .about-me p {
   font-size: 1.2rem; 
   /* text-align: center; */
-  
+  color: var(--secondaryColor);
 }
 
 .wrapper-about h3{
-  padding-top: 1.5rem;
+  padding-top: 2rem;
   padding-bottom: 1.5rem;
   font-size: 2.5rem;
   text-align: center; 
   color: var(--ctaColor);
 
+
 }
 
 .wrapper-about{
-  
+  padding-top: 5vh;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   /* text-align: center; */
   min-height: 50vh;   
-  background-color: rgb(255, 255, 255);
-  color:black;
+  /* background-color: rgb(255, 255, 255); */
+  background-color: white;
+  
 }
 
 #profile-pic{
@@ -347,6 +335,7 @@ flex-direction: column;
   text-align: left;
   width: 50%;
   padding-left: 13%;
+  padding-right: 5%;
 }
 
 
@@ -367,7 +356,7 @@ font-size: 1.4rem;
 display: flex;
 justify-content: center;
 margin-bottom: 5rem;
- 
+
 }
 
 .card1{
@@ -382,6 +371,7 @@ margin-bottom: 5rem;
 }
 
 .skill-header{
+  margin-top: 10vh;
   /* background-color: #095519; */
   width: 100%;
   text-align: center;
@@ -393,7 +383,8 @@ margin-bottom: 5rem;
 .skill-header h3{
   color: var(--ctaColor);
   padding-top: 25px;
-  text-decoration: underline;
+  font-size: 2.5rem;
+  
 }
 
 
@@ -401,6 +392,18 @@ margin-bottom: 5rem;
 .card1 h3{
   padding-bottom: 4px;
   color: var(--background);
+}
+
+.card-content p{
+  color: white;
+}
+
+.card-content a{
+  color: white;
+}
+
+.card-content h2 {
+  color: var(--ctaColor);
 }
 
 
@@ -413,8 +416,9 @@ margin-bottom: 5rem;
   width: 100%;
   height: 100vh;
   margin-top: 200px;
+  background-color:var(--background);
   
-  background-color: rgb(255, 255, 255);
+  /* background-color: rgb(255, 255, 255); */
   /* background-color: var(--background); */
   
 }
@@ -439,8 +443,7 @@ margin-bottom: 5rem;
   margin: 0 20px;
   transition: .4s ease;
   text-align: center;
-  
-  
+ 
 }
 
 .card h2{
@@ -630,11 +633,10 @@ footer{
 
 #profile-pic{
   width: 50%;
+ 
 }
 
-.wrapper-about {
-  margin-top: 2rem; 
-}
+
 
 .card1{
   width: 50px;
@@ -661,6 +663,7 @@ footer{
 
  .skill-header h3{
 margin-top: 20px;
+
  }
 
  .project-wrapper{
